--- a/webconsole-plugins/useradmin/pom.xml
+++ b/webconsole-plugins/useradmin/pom.xml
@@ -117,7 +117,7 @@
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.webconsole</artifactId>
-			<version>4.0.1-SNAPSHOT</version>
+			<version>4.2.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
