--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,7 @@
     specific language governing permissions and limitations
     under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -29,7 +28,7 @@
 
 	<artifactId>org.apache.felix.webconsole.plugins.useradmin</artifactId>
 	<packaging>bundle</packaging>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 
 	<name>Apache Felix Web Console User Admin Plugin</name>
 	<description>
@@ -37,9 +36,9 @@
     </description>
 
 	<scm>
-		<connection>scm:svn:http://svn.apache.org/repos/asf/felix/trunk/webconsole-plugins/useradmin</connection>
-		<developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/webconsole-plugins/useradmin</developerConnection>
-		<url>http://svn.apache.org/viewvc/felix/trunk/webconsole-plugins/useradmin</url>
+		<connection>scm:svn:http://svn.apache.org/repos/asf/felix/releases/org.apache.felix.webconsole.plugins.useradmin-1.0.0</connection>
+		<developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/releases/org.apache.felix.webconsole.plugins.useradmin-1.0.0</developerConnection>
+		<url>http://svn.apache.org/viewvc/felix/releases/org.apache.felix.webconsole.plugins.useradmin-1.0.0</url>
 	</scm>
 
 	<build>
