--- a/core-it/ipojo-core-declaration-test/pom.xml
+++ b/core-it/ipojo-core-declaration-test/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.felix</groupId>
         <artifactId>org.apache.felix.ipojo.runtime.core-it</artifactId>
-        <version>1.12.1-SNAPSHOT</version>
+        <version>1.12.1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.ipojo.api</artifactId>
-            <version>1.12.1-SNAPSHOT</version>
+            <version>1.12.1</version>
         </dependency>
     </dependencies>
 </project>
