--- a/ipojo-gogo-commands/pom.xml
+++ b/ipojo-gogo-commands/pom.xml
@@ -27,7 +27,7 @@
     <packaging>bundle</packaging>
     <name>Apache Felix iPOJO Gogo Command</name>
     <artifactId>org.apache.felix.ipojo.gogo</artifactId>
-    <version>1.12.1-SNAPSHOT</version>
+    <version>1.12.1</version>
 
     <description>
         Provides commands for the Gogo shell to introspect the iPOJO ecosystem.
@@ -40,12 +40,12 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.ipojo</artifactId>
-            <version>1.12.1-SNAPSHOT</version>
+            <version>1.12.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.ipojo.annotations</artifactId>
-            <version>1.11.2</version>
+            <version>1.12.1</version>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
@@ -123,4 +123,10 @@
             </plugin>
         </plugins>
     </build>
+
+  <scm>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/felix/releases/org.apache.felix.ipojo.runtime-project-1.12.1/org.apache.felix.ipojo.gogo</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/releases/org.apache.felix.ipojo.runtime-project-1.12.1/org.apache.felix.ipojo.gogo</developerConnection>
+    <url>http://svn.apache.org/viewvc/felix/releases/?root=Apache-SVN/org.apache.felix.ipojo.runtime-project-1.12.1/org.apache.felix.ipojo.gogo</url>
+  </scm>
 </project>
